--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "main": "index.js",
     "scripts": {
+        "verify:ptau": "snarkjs powersoftau verify powersOfTau28_hez_final_13.ptau",
         "compile": "circom templates/wordle.circom --r1cs --wasm --sym",
         "info": "snarkjs r1cs info wordle.r1cs",
         "witness": "node wordle_js/generate_witness.js wordle_js/wordle.wasm input.json witness.wtns",
@@ -12,7 +13,7 @@
         "verificationKey": "snarkjs zkey export verificationkey wordle_final.zkey verification_key.json",
         "prove": "snarkjs plonk prove wordle_final.zkey witness.wtns proof.json public.json",
         "verify": "snarkjs plonk verify verification_key.json public.json proof.json",
-        "test": "yarn run compile && yarn run witness && yarn run setup && yarn run verificationKey && yarn run prove && yarn run verify"
+        "all": "yarn run compile && yarn run setup && yarn run verificationKey"
     },
     "dependencies": {
         "circomlibjs": "^0.1.1",
