--- a/.dockerignore
+++ b/.dockerignore
@@ -11,14 +11,22 @@
 
 # misc
 **/.DS_Store
-**/.env.local
-**/.env.development.local
-**/.env.test.local
-**/.env.production.local
+**/*.env*
 
 **/npm-debug.log*
 **/yarn-debug.log*
 **/yarn-error.log*
+
+**/.github
+**/.husky
+**/.vscode
+**/*.md
+**/.git*
+**/.prettierrc
+**/Dockerfile
+**/LICENSE
+
+**/generated
 
 # zk
 **/*.r1cs
@@ -30,4 +38,3 @@
 **/proof.json
 **/public.json
 **/verification_key.json
-**/server/**/generated
