--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,8 @@
         "@graphql-tools/schema": "^8.3.1",
         "circomlibjs": "^0.1.1",
         "fastify": "^3.27.0",
+        "fastify-cors": "^6.0.2",
+        "fastify-helmet": "^7.0.1",
         "fp-ts": "^2.11.8",
         "graphql": "^16.3.0",
         "graphql-helix": "^1.11.0",
