--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "main": "index.js",
     "scripts": {
+        "test": "jest --config ../../jest.config.js",
         "verify:ptau": "snarkjs powersoftau verify powersOfTau28_hez_final_13.ptau",
         "compile": "circom templates/wordle.circom --r1cs --wasm --sym",
         "info": "snarkjs r1cs info wordle.r1cs",
@@ -16,12 +17,17 @@
         "all": "yarn run compile && yarn run setup && yarn run verificationKey"
     },
     "dependencies": {
-        "circomlibjs": "^0.1.1",
+        "circomlib": "^2.0.2",
         "snarkjs": "^0.4.12"
     },
     "devDependencies": {
-        "circomlib": "^2.0.2",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.19",
+        "circom_tester": "^0.0.9",
         "circomlibjs": "^0.1.1",
-        "ts-node": "^10.4.0"
+        "jest": "^27.5.1",
+        "ts-jest": "^27.1.3",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.5"
     }
 }
