--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
-        "baseUrl": "./packages" /* Specify the base directory to resolve non-relative module names. */
+        "baseUrl": "./packages", /* Specify the base directory to resolve non-relative module names. */
+        "esModuleInterop": true
     }
 }
