--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,72 +1,60 @@
 name: ci
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
-    deploy:
-        runs-on: ubuntu-20.04
-        steps:
-            # Setup environment
-          - 
-            name: Checkout
-            uses: actions/checkout@v2
-            with:
-                submodules: true
-          -
-            name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v1
-          -
-            name: Login to DockerHub
-            uses: docker/login-action@v1
-            with:
-                username: ${{ secrets.DOCKERHUB_USERNAME }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
-          -
-            name: Login to Heroku container registry
-            uses: docker/login-action@v1
-            with:
-                registry: registry.heroku.com
-                username: _
-                password: ${{ secrets.HEROKU_API_KEY }}
+  deploy:
+    runs-on: ubuntu-20.04
+    steps:
+      # Setup environment
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            # Build and push docker images
-          -
-            name: Build, cache and push the server image
-            uses: docker/build-push-action@v2
-            with:
-                context: .
-                target: server
-                tags: |
-                    thewaryone/zkwordle-server:latest
-                    registry.heroku.com/zkwordle-server/web
-                platforms: linux/amd64
-                cache-from: type=gha
-                cache-to: type=gha,mode=max # the server and client must use the same circuit artifacts to generate valid zk proofs!
-                push: true
-          -
-            name: Build and push the client image
-            uses: docker/build-push-action@v2
-            with:
-                context: .
-                target: client
-                build-args: |
-                    REACT_APP_API_URL=https://zkwordle-server.herokuapp.com/graphql
-                tags: |
-                    thewaryone/zkwordle-client:latest
-                    registry.heroku.com/zkwordle/web
-                platforms: linux/amd64
-                cache-from: type=gha
-                cache-to: type=gha,mode=max
-                push: true
+      # Build and push docker images
+      - name: Build, cache and push the server image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          target: server
+          tags: |
+            thewaryone/zkwordle-server:latest
+          platforms: linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max # the server and client must use the same circuit artifacts to generate valid zk proofs!
+          push: true
 
-            # Release new builds
-          -
-            name: Release new builds
-            run: |
-                heroku container:release -a zkwordle-server web
-                heroku container:release -a zkwordle web
-            env:
-                HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Build and push the client image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          target: client
+          build-args: |
+            REACT_APP_API_URL=https://zkwordle-server.fly.dev/graphql
+          tags: |
+            thewaryone/zkwordle-client:latest
+          platforms: linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          push: true
+
+      # Release new builds
+      - name: Setup fly cli
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Release new builds
+        run: |
+          flyctl deploy --config fly.server.toml
+          flyctl deploy --config fly.client.toml
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
